<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>java-runtime-decompiler</artifactId>
        <groupId>java-runtime-decompiler</groupId>
        <version>4.0.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>decompiler-agent</artifactId>
    <packaging>jar</packaging>
    <name>Decompiler Agent</name>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <licenseDir>${basedir}/../</licenseDir>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <compilerArgs>
                        <arg>--add-modules</arg>
                        <arg>jdk.jdeps,jdk.attach,jdk.hotspot.agent</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.jdeps/com.sun.tools.javap=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Premain-Class>org.jrd.agent.Main</Premain-Class>
                            <Agent-Class>org.jrd.agent.Main</Agent-Class>
                            <Can-Redefine-Classes>true</Can-Redefine-Classes>
                            <Can-Retransform-Classes>true</Can-Retransform-Classes>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
        <resources>
        <resource>
            <directory>${licenseDir}</directory>
            <includes>
                <include>LICENSE</include>
            </includes>
        </resource>
        </resources>
    </build>
    <dependencies>
    </dependencies>


</project>
